--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@
 	--blue: #458588;
 	--yellow: #d79921;
 	--green: #8ec07c;
-	
-
+	--red: #cc241d;
 }
 
 * {
@@ -19,7 +18,6 @@ body {
   font-family: "Roboto Mono", monospace;
 }
 
-
 .nav {
 	background-color: var(--blue);
 	color: var(--white);
@@ -29,7 +27,6 @@ body {
 	align-items: center;
 	justify-content: space-between;
 	padding: 1rem;
-	/* outline: 1px solid red; */
 }
 
 .nav__btns {
@@ -37,25 +34,37 @@ body {
 	gap: 1rem;
 	justify-content: space-between;
 	align-items: center;
-	/* outline: 1px solid red; */
 	height: 100%;
-
 }
 
 .nav__btn {
-	font-size: 1em;
 	border: 0;
-	background-color: #ffffff00;
-	background-color: var(--yellow);
 	color: var(--white);
-	padding: 0.5rem;
-	border-radius: 0.8rem;
-	font-weight: bold;
+	padding: 0.25rem 0.25rem 0.08rem 0.25rem;
+	border-radius: 0.3rem;
+	text-align: center;
+}
+
+.nav__btn-red {
+	background-color: var(--red);
+}
+
+.nav__btn-green {
+	background-color: var(--green);
+}
+
+.nav__btn-yellow {
+	background-color: var(--yellow);
 }
 
 .nav__btn:active {
 	background-color: var(--green);
 
+}
+
+.icon {
+	fill: var(--white);
+	height: 1rem;
 }
 
 .container {
@@ -64,7 +73,6 @@ body {
 	flex-direction: row;
 	width: 100vw;
 	height: 94vh;
-	/* outline: 1px solid red; */
 	gap: 1rem;
 }
 
@@ -91,4 +99,25 @@ body {
 	/* outline: 1.5px solid var(--yellow); */
 	/* outline: 1px solid green; */
   overflow-y: scroll;
+}
+
+@media screen and (max-width: 720px) {
+	.container {
+		flex-direction: column;
+		/* width: 100vw;
+		height: 94vh;
+		gap: 1rem; */
+	}
+
+	.editor {
+		width: auto;
+		height: 50%;
+		margin: 1rem 1rem 0 1rem;
+	}
+
+	.iframe {
+		width: auto;
+		margin: 0 1rem 1rem 1rem;
+		height: 50%;
+	}
 }
